samples/_failures_safe/1761660731_746c91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69be269b.c: In function ‘execute_operation’:
./samples/SAFE/__tmp_69be269b.c:146: error: expected ‘{’ at end of input
